Bug 56126 - EDITING: Conditional field and vertical separator
Summary: EDITING: Conditional field and vertical separator
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.6 release
Hardware: All All
: low major
Assignee: Andreas Heinisch
URL:
Whiteboard: BSA target:26.8.0
Keywords:
Depends on:
Blocks: Fields
  Show dependency treegraph
 
Reported: 2012-10-18 08:10 UTC by Paul Monnerat
Modified: 2026-02-08 18:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Monnerat 2012-10-18 08:10:02 UTC
Problem description: 

Steps to reproduce:
1. Ctrl + F2 to insert other field
2. Function Tab
3. Write a condition
4. If yes, write something
5. If not, write something then | then other words
6. After you click OK, the text on 5. is display
7. Right click on field and choose Field
8. Change in If not field
9. Click OK and after | disappear

Current behavior:
By modify the conditional field, text after vertical separator | disapear.

Expected behavior:
Text after | have to appear.

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Windows NT 5.1; rv:16.0) Gecko/20100101 Firefox/16.0
Comment 1 A (Andy) 2013-03-10 11:38:15 UTC
reproducible with LO 4.0.1.2 (Win7 Home, 64bit)

The text after the character "|" disappears.
Comment 2 QA Administrators 2015-02-19 15:48:25 UTC Comment hidden (obsolete)
Comment 3 Buovjaga 2015-03-08 17:43:00 UTC
Reproduced.

In the field creation Conditional Text, I put:
Condition: page == 2
Then: foo
Else: foo | bar

After inserting, foo and a space were visible in the field.
Closed field dialog, right-clicked field - Fields. Noticed | bar had disappeared from Else.

Win 7 Pro 64-bit, LibO Version: 4.4.1.2
Build ID: 45e2de17089c24a1fa810c8f975a7171ba4cd432
Locale: fi_FI
Comment 4 Paul Monnerat 2015-03-09 09:28:06 UTC
Also reproduced in version: 4.2.8.2 under Win 7
Comment 5 Buovjaga 2015-03-09 10:47:12 UTC
Same problem on Linux.
Reverting version field change, it's the oldest observed.

Ubuntu 14.10 64-bit 
Version: 4.4.1.2
Build ID: 40m0(Build:2)
Locale: en_US
Comment 6 Joel Madero 2015-03-11 18:17:59 UTC
Prioritizing:
*Please do not adjust the priority without consulting QA on the mailing list or in the chat room http://webchat.freenode.net/?channels=libreoffice-qa

Priorities are set per this chart: https://wiki.documentfoundation.org/File:Prioritizing_Bugs_Flowchart.jpg

Major: - loss of data
Low: In several years we have seen no duplicates, no additional users outside of QA confirming, etc... pretty obvious that this is a corner case.
Comment 7 tommy27 2016-04-16 07:25:35 UTC Comment hidden (obsolete)
Comment 8 QA Administrators 2017-05-22 13:27:15 UTC Comment hidden (obsolete)
Comment 9 Paul Monnerat 2017-07-03 12:32:34 UTC
Bug is persistant.
Version 5.2.7.2
Windows 7
Comment 10 QA Administrators 2019-05-31 02:51:00 UTC Comment hidden (obsolete)
Comment 11 Paul Monnerat 2019-05-31 05:47:04 UTC
Bug persistant

Version: 6.1.6.3 (x64)
Build ID: 5896ab1714085361c45cf540f76f60673dd96a72
Threads CPU : 8; OS : Windows 10.0; UI Render : par défaut; 
Locale : fr-CH (fr_CH); Calc: group threaded
Comment 12 QA Administrators 2021-05-31 04:12:17 UTC Comment hidden (obsolete)
Comment 13 Paul Monnerat 2022-08-21 08:48:59 UTC
Bug is persistent
Same issue with version 7.3.5.2 (x64)
Comment 14 Andreas Heinisch 2023-12-20 20:33:49 UTC
This is due to the fact that the conditions are internally separated using the vertical separator. I will have a look if we can chose a high ascii character as a separator. I hope it will not break any legacy files.
Comment 15 QA Administrators 2025-12-20 03:12:22 UTC Comment hidden (obsolete)
Comment 16 Paul Monnerat 2025-12-26 07:36:39 UTC
The issue is persistent in this version:

Version: 25.2.7.2 (X86_64) / LibreOffice Community
Build ID: 5cbfd1ab6520636bb5f7b99185aa69bd7456825d
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: fr-CH (fr_CH); UI: fr-FR
Calc: threaded
Comment 17 Commit Notification 2026-02-08 18:29:50 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a338ec1d3b2293ff34b159bb2a2da67e249d5655

tdf#56126 - Changed separator for conditional fields

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.