tdf#56126 - Changed separator for conditional fields

In order to support the previosuly used vertical separator.

Change-Id: I62d05a1ce9e95d34879ac2970c57fd0e4f78f987
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198813
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>